--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,36 @@
+
 services:
   postgres:
     image: postgres:16.3
     restart: always
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=ai_restaurants
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - ./postgres:/var/lib/postgresql/data
+    env_file: 
+      - .env
+    
   
   backend:
     build: ./backend
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT}:3000"
     environment:
-      - DATABASE_URL=postgres://postgres:secret@postgres:5432/ai_restaurants
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - postgres
+    env_file: 
+      - .env
   
   frontend:
     build: ./frontend
     ports:
-      - "4200:80"
+      - "${FRONTEND_PORT}:80"
     depends_on:
       - backend
+    env_file: 
+      - .env
