--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,8 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+COPY assets ./assets
+COPY public ./public
 
 RUN npx prisma generate
 RUN npm run build
