--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-parser": "^3.2.0",
+    "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma-nestjs-graphql": "^21.2.0",
@@ -53,6 +55,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.5",
