creación de ordenes con ayuda del asistente

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,4 +2,6 @@ DATABASE_URL=postgres://postgres:secret@localhost:5432/ai_restaurants
 JWT_SECRET=
 JWT_EXPIRES_IN=3600s
 
+OPENAI_API_KEY=
+
 WEB_CHAT_URL=http://localhost:4200/chat
