--- a/backend/package.json
+++ b/backend/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "openai": "^4.100.0",
     "prettier": "^3.4.2",
     "prisma": "^6.8.1",
     "source-map-support": "^0.5.21",
